@@ -59,8 +59,6 @@ setup (
         test = [
             'z3c.testing',
             'zope.app.testing',
-            'zope.publisher',
-            'zope.session',
             'zope.testing',
             ],
         ),
@@ -72,11 +70,10 @@ setup (
         'z3c.formui',
         'z3c.i18n',
         'z3c.template',
-        'zope.app.component',
-        'zope.app.container',
         'zope.app.generations',
-        'zope.app.security',
+        'zope.authentication',
         'zope.component',
+        'zope.container',
         'zope.deprecation',
         'zope.dublincore',
         'zope.event',
@@ -84,10 +81,13 @@ setup (
         'zope.interface',
         'zope.lifecycleevent',
         'zope.location',
+        'zope.password',
+        'zope.principalregistry',
         'zope.publisher',
         'zope.schema',
         'zope.security',
         'zope.session',
+        'zope.site',
         'zope.traversing',
         ],
     zip_safe = False,
