@@ -26,8 +26,8 @@ from zope.publisher.interfaces.http import IHTTPRequest
 from zope.session.interfaces import ISession
 from zope.traversing.browser.absoluteurl import absoluteURL
 
-from zope.app.component import hooks
-from zope.app.container import contained
+from zope.site import hooks
+from zope.container import contained
 
 from z3c.authenticator import interfaces
 
