@@ -19,7 +19,7 @@ __docformat__ = "reStructuredText"
 import zope.interface
 import zope.component
 from zope.security.interfaces import IPrincipal
-from zope.app.security.interfaces import IAuthentication
+from zope.authentication.interfaces import IAuthentication
 
 from z3c.authenticator import interfaces
 
